@@ -28,6 +28,7 @@ K  6551	Update logging demos to use the new 1.5.2 features
 K  6638	attachment filenames aren't being encoded by default
 K  6657	SharedFileInputStream has problems with 2GB+ files
 K  6667	MimeBodyPart with copied DataHandler doesn't always set encoding
+K  6668	 skip unusable Store and Transport classes
 
 
 		  CHANGES IN THE 1.5.2 RELEASE
